ensembl score and other improvements